few changes added

--- a/myport/templates/light/index.html
+++ b/myport/templates/light/index.html
@@ -134,7 +134,7 @@
                   <span class="wrap-icon icon-link2"></span>
                   <div class="portfolio-item-content">
                     <h3>Lagos Afrobeat Concert</h3>
-                    <p>Web, Python</p>
+                    <p>Web, Static</p>
                   </div>
                 </div>
                 <img src="../../static/assets/img/cm1.png" class="lazyload  img-fluid" alt="Images" />
@@ -147,7 +147,7 @@
                   <span class="wrap-icon icon-photo2"></span>
                   <div class="portfolio-item-content">
                     <h3>Expense Tracker</h3>
-                    <p>Application, javascript</p>
+                    <p>Web, javascript</p>
                   </div>
                 </div>
                 <img src="../../static/assets/img/budget1.jpeg" class="lazyload  img-fluid" alt="Images" />
@@ -173,7 +173,7 @@
                   <span class="wrap-icon icon-photo2"></span>
                   <div class="portfolio-item-content">
                     <h3>GPS Location Tracker</h3>
-                    <p>Web, React, Node js and Express Js</p>
+                    <p>Web, Python(Flask)</p>
                   </div>
                 </div>
                 <img src="../../static/assets/img/gps.png" class="lazyload  img-fluid" alt="Images" />
@@ -248,7 +248,7 @@
       <div class="row mt-5 justify-content-between">
         <div class="col-lg-7 mb-5 mb-lg-0" data-aos="fade-up">
           <figure class="dotted-bg gsap-reveal-img">
-            <img src="../../static/assets/img/profilepic.jpg" alt="Image" class="img-fluid">
+            <img src="../../static/assets/img/sageone.jpg" alt="Image" class="img-fluid">
           </figure>
         </div>
         <div class="col-lg-4 pr-lg-5">
