few changes added

--- a/myport/templates/light/index.html
+++ b/myport/templates/light/index.html
@@ -128,6 +128,19 @@
               </a>
           </div>
 
+          <div class="item illustration packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
+            <a href="../../static/assets/img/login1.png" class="portfolio-item isotope-item gsap-reveal-img" data-fancybox="gallery" data-caption="Login UI">
+                <div class="overlay">
+                  <span class="wrap-icon icon-photo2"></span>
+                  <div class="portfolio-item-content">
+                    <h3>Expense Tracker</h3>
+                    <p>web, Python(Flask)</p>
+                  </div>
+                </div>
+                <img src="../../static/assets/img/loginui3.png" class="lazyload  img-fluid" alt="Images" />
+              </a>
+          </div>
+
           <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
             <a href="{{url_for('afrobeat')}}" class="portfolio-item  item-portrait isotope-item gsap-reveal-img" data-id="2">
                 <div class="overlay">
@@ -141,18 +154,20 @@
               </a>
           </div>
 
+      
           <div class="item branding web col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-            <a href="../../static/assets/img/et2.png" class="portfolio-item item-portrait isotope-item gsap-reveal-img" data-fancybox="gallery" data-caption="Expense Tracker">
+            <a href="{{url_for('expensetracker')}}" class="portfolio-item isotope-item gsap-reveal-img" data-id="4" target="_blank">
                 <div class="overlay">
-                  <span class="wrap-icon icon-photo2"></span>
+                  <span class="wrap-icon icon-link2"></span>
                   <div class="portfolio-item-content">
                     <h3>Expense Tracker</h3>
-                    <p>Web, javascript</p>
+                    <p>Web, Python(Flask)</p>
                   </div>
                 </div>
-                <img src="../../static/assets/img/budget1.jpeg" class="lazyload  img-fluid" alt="Images" />
+                <img src="../../static/assets/img/expensetrack1.png" class="lazyload  img-fluid" alt="Images" />
               </a>
           </div>
+
 
           <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
             <a href=".../../static/assets/video/kics.mp4" class="portfolio-item isotope-item gsap-reveal-img" data-fancybox="gallery" data-caption="KIC'S Worldwide">
@@ -168,7 +183,7 @@
           </div>
 
           <div class="item web illustration col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-            <a href="../../static/assets/img/gps3.png" class="portfolio-item isotope-item gsap-reveal-img" data-fancybox="gallery" data-caption="Render Packaging">
+            <a href="{{url_for('locationtracker')}}" class="portfolio-item isotope-item gsap-reveal-img" data-fancybox="gallery" data-caption="Render Packaging">
                 <div class="overlay">
                   <span class="wrap-icon icon-photo2"></span>
                   <div class="portfolio-item-content">
