--- a/myport/templates/light/portfolio-single-3.html
+++ b/myport/templates/light/portfolio-single-3.html
@@ -3,7 +3,7 @@
 
       {%block content%}
 
-      <div class="cover-v1 jarallax" style="" id="home-section">
+      <div class="cover-v1 jarallax"  id="home-section">
         <div class="container">
           <div class="row align-items-center">
 
