--- a/myport/templates/light/index.html
+++ b/myport/templates/light/index.html
@@ -128,18 +128,7 @@
               </a>
           </div>
 
-          <div class="item illustration packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-            <a href="../../static/assets/img/login1.png" class="portfolio-item isotope-item gsap-reveal-img" data-fancybox="gallery" data-caption="Login UI">
-                <div class="overlay">
-                  <span class="wrap-icon icon-photo2"></span>
-                  <div class="portfolio-item-content">
-                    <h3>Expense Tracker</h3>
-                    <p>web, Python(Flask)</p>
-                  </div>
-                </div>
-                <img src="../../static/assets/img/loginui3.png" class="lazyload  img-fluid" alt="Images" />
-              </a>
-          </div>
+   
 
           <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
             <a href="{{url_for('afrobeat')}}" class="portfolio-item  item-portrait isotope-item gsap-reveal-img" data-id="2">
@@ -160,7 +149,7 @@
                 <div class="overlay">
                   <span class="wrap-icon icon-link2"></span>
                   <div class="portfolio-item-content">
-                    <h3>Expense Tracker</h3>
+                    <h3>Navigation</h3>
                     <p>Web, Python(Flask)</p>
                   </div>
                 </div>
@@ -182,12 +171,12 @@
               </a>
           </div>
 
-          <div class="item web illustration col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-            <a href="{{url_for('locationtracker')}}" class="portfolio-item isotope-item gsap-reveal-img" data-fancybox="gallery" data-caption="Render Packaging">
+          <div class="item branding web col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
+            <a href="{{url_for('locationtracker')}}" class="portfolio-item isotope-item gsap-reveal-img" data-id="4" target="_blank">
                 <div class="overlay">
-                  <span class="wrap-icon icon-photo2"></span>
+                  <span class="wrap-icon icon-link2"></span>
                   <div class="portfolio-item-content">
-                    <h3>GPS Location Tracker</h3>
+                    <h3>Gps Location Tracker</h3>
                     <p>Web, Python(Flask)</p>
                   </div>
                 </div>
