--- a/myport/templates/light/portfolio-single-7.html
+++ b/myport/templates/light/portfolio-single-7.html
@@ -9,7 +9,7 @@
     <div class="row align-items-center">
 
       <div class="col-md-10 mx-auto text-center">
-        <h1 class="heading" data-aos="fade-up">Expense Tracker</h1>
+        <h1 class="heading" data-aos="fade-up">Navigation</h1>
         <h2 class="subheading" data-aos="fade-up" data-aos-delay="100">Effortlessly Monitor Your Expenses: Your Gateway to Financial Management.</h2>
       </div>
 
