--- a/myport/templates/light/index.html
+++ b/myport/templates/light/index.html
@@ -1,7 +1,95 @@
 {%extends 'light/layout.html'%}
 
 {%block banner%}
+<style>
+  .animated-button {
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    padding: 16px 36px;
+    border: 4px solid;
+    border-color: transparent;
+    font-size: 16px;
+    background-color: inherit;
+    border-radius: 100px;
+    font-weight: 600;
+    color: rgb(147, 12, 12);
+    box-shadow: 0 0 0 2px rgb(147, 12, 12);
+    cursor: pointer;
+    overflow: hidden;
+    transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+  }
 
+  .animated-button svg {
+    position: absolute;
+    width: 24px;
+    fill: rgb(147, 12, 12);
+    z-index: 9;
+    transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+  }
+
+  .animated-button .arr-1 {
+    right: 16px;
+  }
+
+  .animated-button .arr-2 {
+    left: -25%;
+  }
+
+  .animated-button .circle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 20px;
+    height: 20px;
+    background-color: rgb(147, 12, 12);
+    border-radius: 50%;
+    opacity: 0;
+    transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+  }
+
+  .animated-button .text {
+    position: relative;
+    z-index: 1;
+    transform: translateX(-12px);
+    transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+  }
+
+  .animated-button:hover {
+    box-shadow: 0 0 0 12px transparent;
+    color: #212121;
+    border-radius: 12px;
+  }
+
+  .animated-button:hover .arr-1 {
+    right: -25%;
+  }
+
+  .animated-button:hover .arr-2 {
+    left: 16px;
+  }
+
+  .animated-button:hover .text {
+    transform: translateX(12px);
+  }
+
+  .animated-button:hover svg {
+    fill: #212121;
+  }
+
+  .animated-button:active {
+    scale: 0.95;
+    box-shadow: 0 0 0 4px rgb(147, 12, 12);
+  }
+
+  .animated-button:hover .circle {
+    width: 220px;
+    height: 220px;
+    opacity: 1;
+  }
+</style>
 <div class="cover-v1 jarallax overlay"style="background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('../../static/assets/images/cs4.png'); background-position: top;" id="home-section">
     <div class="container">
       <div class="row align-items-center">
@@ -264,15 +352,14 @@
       </div>
     </div>
   </div>
-
   <div class="unslate_co--section" id="services-section">
     <div class="container">
-
+  
       <div class="section-heading-wrap text-center mb-5">
         <h2 class="heading-h2 text-center divider">My Services</h2>
         <img src="../../static/assets/images/divider.png" alt="divider" width="76">
       </div>
-
+  
       <div class="row gutter-v3">
         <div class="col-md-6 col-lg-4 mb-4">
           <div class="feature-v1" data-aos="fade-up" data-aos-delay="0">
@@ -301,7 +388,7 @@
             <p>Integration of RESTful APIs and FastAPIs to connect web applications with external services and resources. </p>
           </div> 
         </div>
-
+  
         <div class="col-md-6 col-lg-4 mb-4">
           <div class="feature-v1" data-aos="fade-up" data-aos-delay="0">
             <div class="wrap-icon mb-3">
@@ -329,12 +416,31 @@
             <p>Collaborative team player with a passion for learning and sharing knowledge, contributing to the success of projects.</p>
           </div> 
         </div>
-
       </div>
-
+  
+      <div class="section-heading-wrap text-center mb-5">
+        <h2 class="heading-h2 text-center divider">Pricing</h2>
+        <img src="../../static/assets/images/divider.png" alt="divider" width="76">
+      </div>
+  
+      <div class="row gutter-v3 text-center">
+        <div class="col-md-12">
+          <p>Check out my detailed pricing plans for various web development services. I offer competitive rates tailored to your project needs. Click the button below to learn more about my pricing.</p>
+          <a href="https://www.webpricing.onrender.com" class="animated-button">
+            <svg viewBox="0 0 24 24" class="arr-2" xmlns="http://www.w3.org/2000/svg">
+              <path d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"></path>
+            </svg>
+            <span class="text">View Pricing</span>
+            <span class="circle"></span>
+            <svg viewBox="0 0 24 24" class="arr-1" xmlns="http://www.w3.org/2000/svg">
+              <path d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"></path>
+            </svg>
+          </a>
+        </div>
+      </div>
+  
     </div>
   </div>
-
   <div class="unslate_co--section section-counter" id="skills-section">
     <div class="container">
       <div class="section-heading-wrap text-center mb-5">
