--- a/myport/templates/light/index.html
+++ b/myport/templates/light/index.html
@@ -271,6 +271,18 @@
                 <img src="../../static/assets/img/gps.png" class="lazyload  img-fluid" alt="Images" />
               </a>
           </div>
+          <div class="item branding web col-sm-6 col-md-6 col-lg-4 isotope-mb-2 ">
+            <a href="https://budget-planner-chi.vercel.app/" class="portfolio-item  item-portrait isotope-item gsap-reveal-img" data-id="3" target="_blank">
+                <div class="overlay">
+                  <span class="wrap-icon icon-link2"></span>
+                  <div class="portfolio-item-content">
+                    <h3>Budget Tracker</h3>
+                    <p>Web, JavaScript.</p>
+                  </div>
+                </div>
+                <img src= "../../static/assets/img/et3.png" class="lazyload  img-fluid" alt="Images" />
+              </a>
+          </div>
 
           <div class="item branding web col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
             <a href="{{url_for('amanigotravels')}}" class="portfolio-item isotope-item gsap-reveal-img" data-id="4" target="_blank">
@@ -426,7 +438,7 @@
       <div class="row gutter-v3 text-center">
         <div class="col-md-12">
           <p>Check out my detailed pricing plans for various web development services. I offer competitive rates tailored to your project needs. Click the button below to learn more about my pricing.</p>
-          <a href="https://www.webpricing.onrender.com" class="animated-button">
+          <a href="https://webpricing.onrender.com/" class="animated-button">
             <svg viewBox="0 0 24 24" class="arr-2" xmlns="http://www.w3.org/2000/svg">
               <path d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"></path>
             </svg>
