--- a/myport/templates/light/admin.html
+++ b/myport/templates/light/admin.html
@@ -157,28 +157,29 @@ button[type="submit"]:focus,
     </video>
 </div>
 
+
 <div class="container">
     <h2>Create New Blog Post</h2>
     <form method="POST" action="{{ url_for('admin') }}" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
         <div class="form-group">
-            {{ form.title.label(class_='form-label') }}
-            {{ form.title(class_='form-control') }}
+            {{ form.title.label(class_='form-label')|safe }}
+            {{ form.title(class_='form-control')|safe }}
         </div>
         <div class="form-group">
-            {{ form.content.label(class_='form-label') }}
-            {{ form.content(class_='form-control') }}
+            {{ form.content.label(class_='form-label')|safe }}
+            {{ form.content(class_='form-control')|safe }}
         </div>
         <div class="form-group">
-            {{ form.image.label(class_='form-label') }}
-            {{ form.image(class_='form-control', id='imageInput') }}
+            {{ form.image.label(class_='form-label')|safe }}
+            {{ form.image(class_='form-control', id='imageInput')|safe }}
             <img id="imagePreview" src="#" alt="Image Preview"/>
         </div>
         <div class="form-group">
-            {{ form.author.label(class_='form-label') }}
-            {{ form.author(class_='form-control') }}
+            {{ form.author.label(class_='form-label')|safe }}
+            {{ form.author(class_='form-control')|safe }}
         </div>
-        {{ form.submit(class_='btn btn-primary') }}
+        {{ form.submit(class_='btn btn-primary')|safe }}
     </form>
 </div>
 
