--- a/myport/templates/light/layout.html
+++ b/myport/templates/light/layout.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../../static/assets/css/vendor/owl.carousel.min.css">
     <link rel="stylesheet" href="../../static/assets/css/vendor/aos.css">
     <link rel="stylesheet" href="../../static/assets/css/vendor/animate.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../static/assets/css/vendor/bootstrap.min.css">
     <link rel="stylesheet" href="../../static/assets/css/vendor/jquery.fancybox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
@@ -167,7 +167,8 @@
     <div class="site-loader-wrap">
       <div class="site-loader dark"></div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" ></script>
     
 
 
