blog and seo modification

--- a/myport/templates/light/layout.html
+++ b/myport/templates/light/layout.html
@@ -1,15 +1,34 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>{{pagename}}</title>
+    <title>{{ pagename }}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-    <meta name="description" content="A ">
-    <meta content="I am Abakwe Carrington, a skilled Full Stack Python Engineer passionate about building robust web applications. Explore my portfolio to see my expertise in web development, backend technologies, and more." name="description">
-    <meta content="Abakwe Carrington, Html, CSS, Javascript, Jquery, AJAX, Full Stack Python Engineer, Web Developer, Backend Developer, Python Developer, Software Engineer" name="keywords">
-    <meta name="author" content="Unslate.co">
+    <!-- Meta Descriptions -->
+    <meta name="description" content="I am Abakwe Carrington, a skilled Full Stack Python Engineer passionate about building robust web applications. Explore my portfolio to see my expertise in web development, backend technologies, and more.">
+    <meta name="keywords" content="Abakwe Carrington, Html, CSS, Javascript, Jquery, AJAX, Full Stack Python Engineer, Web Developer, Backend Developer, Python Developer, Software Engineer">
+    <meta name="author" content="Abakwe Carrington">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://mainportfolio2.onrender.com/">
+    <meta property="og:title" content="{{ pagename }}">
+    <meta property="og:description" content="I am Abakwe Carrington, a skilled Full Stack Python Engineer passionate about building robust web applications. Explore my portfolio to see my expertise in web development, backend technologies, and more.">
+    <meta property="og:image" content="hhttps://pbs.twimg.com/profile_images/1452874529114664960/QxYmJS6U.jpgg">
 
+    <!-- Twitter -->
+    <meta property="linkedin:card" content="summary_large_image">
+    <meta property="linkedin:url" content="https://www.linkedin.com/in/carrington-abakwe-b0b0a0217">
+    <meta property="linkedin:title" content="{{ pagename }}">
+    <meta property="linkedin:description" content="I am Abakwe Carrington, a skilled Full Stack Python Engineer passionate about building robust web applications. Explore my portfolio to see my expertise in web development, backend technologies, and more.">
+    <meta property="twitter:image" content="https://pbs.twimg.com/profile_images/1452874529114664960/QxYmJS6U.jpg">
+
+    <!-- Favicon -->
+    <link rel="icon" href="../../static/assets/img/circle2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../static/assets/img/circle2.png" type="image/x-icon">
+
+    <!-- Vendor CSS -->
     <link rel="stylesheet" href="../../static/assets/css/vendor/icomoon/style.css">
     <link rel="stylesheet" href="../../static/assets/css/vendor/owl.carousel.min.css">
     <link rel="stylesheet" href="../../static/assets/css/vendor/aos.css">
@@ -17,13 +36,11 @@
     <link rel="stylesheet" href="../../static/assets/css/vendor/bootstrap.min.css">
     <link rel="stylesheet" href="../../static/assets/css/vendor/jquery.fancybox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
     
-
     <!-- Theme Style -->
     <link rel="stylesheet" href="../../static/assets/css/style.css">
+</head>
 
-  </head>
   <body data-spy="scroll" data-target=".site-nav-target" data-offset="200">
 
     <nav class="unslate_co--site-mobile-menu">
