--- a/myport/templates/light/blog-single.html
+++ b/myport/templates/light/blog-single.html
@@ -210,7 +210,7 @@
     </div>
 </div>
 
-<div class="container">
+<div class="container mb-5">
     <div class="pt-5 ">
         <h3 class="mb-5">{{ comments|length }} Comments</h3>
         <ul class="comment-list">
@@ -229,24 +229,26 @@
             {% endfor %}
         </ul>
         <!-- Comment form -->
-        <div class="form-container">
-            <h3 class="text-center">Leave a Comment</h3>
-            <form id="commentForm" method="post" action="{{ url_for('submit_comment', post_id=post.id) }}">
-                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
-                <div class="mb-3">
-                    <label for="name" class="form-label">Your Name</label>
-                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name" required>
-                </div>
-                <div class="mb-3">
-                    <label for="comment" class="form-label">Your Comment</label>
-                    <textarea class="form-control" id="comment" name="comment" rows="4" placeholder="Write your comment here..." required></textarea>
-                </div>
-                <div class="text-right">
-                    <button type="submit" class="btn btn-primary" id="submitComment">Submit Comment</button>
-                </div>
-            </form>
-        </div>
+       
     </div>
+</div>
+
+<div class="form-container mb-5">
+  <h3 class="text-center">Leave a Comment</h3>
+  <form id="commentForm" method="post" action="{{ url_for('submit_comment', post_id=post.id) }}">
+      <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+      <div class="mb-3">
+          <label for="name" class="form-label">Your Name</label>
+          <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name" required>
+      </div>
+      <div class="mb-3">
+          <label for="comment" class="form-label">Your Comment</label>
+          <textarea class="form-control" id="comment" name="comment" rows="4" placeholder="Write your comment here..." required></textarea>
+      </div>
+      <div class="text-right">
+          <button type="submit" class="btn btn-primary" id="submitComment">Submit Comment</button>
+      </div>
+  </form>
 </div>
 
 {% endblock %}
