--- a/myport/templates/light/index.html
+++ b/myport/templates/light/index.html
@@ -291,6 +291,21 @@
               </a>
           </div>
 
+
+          <div class="item branding web col-sm-6 col-md-6 col-lg-4 isotope-mb-2 ">
+            <a href="https://wikisearch-6l7h.onrender.com/" class="portfolio-item  item-portrait isotope-item gsap-reveal-img" data-id="3" target="_blank">
+                <div class="overlay">
+                  <span class="wrap-icon icon-link2"></span>
+                  <div class="portfolio-item-content">
+                    <h3>Wiki Searcher</h3>
+                    <p>Web, JavaScript.</p>
+                  </div>
+                </div>
+                <img src= "../../static/assets/images/wiwkisearch2.png" class="lazyload  img-fluid" alt="Images" />
+              </a>
+          </div>
+
+
           <div class="item branding web col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
             <a href="{{url_for('amanigotravels')}}" class="portfolio-item isotope-item gsap-reveal-img" data-id="4" target="_blank">
                 <div class="overlay">
