--- a/myport/templates/light/index.html
+++ b/myport/templates/light/index.html
@@ -374,7 +374,7 @@
       <div class="row mt-5 justify-content-between">
         <div class="col-lg-7 mb-5 mb-lg-0" data-aos="fade-up">
           <figure class="dotted-bg gsap-reveal-img">
-            <img src="../../static/assets/img/sageone.jpg" alt="Image" class="img-fluid">
+            <img src="../../static/assets/images/light.png" alt="Image" class="img-fluid">
           </figure>
         </div>
         <div class="col-lg-4 pr-lg-5">
