--- a/myport/templates/light/portfolio-single-2.html
+++ b/myport/templates/light/portfolio-single-2.html
@@ -104,7 +104,7 @@
                     <div class="col-sm-6 col-md-6 col-lg-3">
                       <div class="detail-v1">
                         <span class="detail-label">Visit</span>
-                        <span class="detail-val"><a href="#">https://</a></span>
+                        <span class="detail-val"><a href="https://lagosafrobeat.onrender.com">https://lagosafrobeat.onrender.com</a></span>
                       </div>
                     </div>
                   </div>
