--- a/myport/templates/light/index.html
+++ b/myport/templates/light/index.html
@@ -347,7 +347,7 @@
                 <img src="../../static/assets/img/resuglow1.png" class="lazyload  img-fluid" alt="Images" />
               </a>
           </div>
-          <div class="item packaging illustration col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
+          <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
             <a href="{{url_for('coderscoffee')}}" class="portfolio-item isotope-item gsap-reveal-img" data-id="4" target="_blank">
                 <div class="overlay">
                   <span class="wrap-icon icon-link2"></span>
