--- a/myport/templates/light/portfolio-single-5.html
+++ b/myport/templates/light/portfolio-single-5.html
@@ -71,7 +71,7 @@
                   <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="detail-v1">
                       <span class="detail-label">Visit</span>
-                      <span class="detail-val"><a href="https://amanigotravels.onrender.com/">Amanigo Travels</a></span>
+                      <span class="detail-val"><a href="http://amanigo.com/">Amanigo Travels</a></span>
                     </div>
                   </div>
                 </div>
