--- a/myport/templates/light/portfolio-single-5.html
+++ b/myport/templates/light/portfolio-single-5.html
@@ -65,7 +65,7 @@
                   <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="detail-v1">
                       <span class="detail-label">Client</span>
-                      <span class="detail-val">Personal Project</span>
+                      <span class="detail-val">Abdulkadir Hamza</span>
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-6 col-lg-3">
